--- a/components/footer.html
+++ b/components/footer.html
@@ -19,6 +19,7 @@
             <h3>Liên Kết Nhanh</h3>
             <ul class="footer-links">
                 <li><a href="index.html">Trang Chủ</a></li>
+                <li><a href="public_status_board.html">Đăng Trạng Thái</a></li>
                 <li><a href="emotions.html">Cảm Xúc</a></li>
                 <li><a href="facts.html">Sự Thật Thú Vị</a></li>
                 <li><a href="about.html">Giới Thiệu</a></li>
