--- a/components/footer.html
+++ b/components/footer.html
@@ -43,12 +43,12 @@
             <ul class="footer-links">
                 <li><i class="fas fa-envelope"></i> infographic2vn@gmail.com</li>
                 <li><i class="fas fa-phone"></i> +84 123 456 789 - không không có</li>
-                <li><i class="fas fa-map-marker-alt"></i>Việt Nam</li>
+                <li><i class="fas fa-map-marker-alt"></i> Việt Nam</li>
             </ul>
         </div>
     </div>
     
     <div class="copyright">
-        <p>&copy; 2024 Thế Giới Cảm Xúc. Tất cả các quyền được bảo lưu. | Thiết kế với ❤️ cho cộng đồng</p>
+        <p>&copy; 2025 infoGraphic.. | Thiết kế cùng với ❤️ và nổi nhớ</p>
     </div>
 </footer>
