--- a/components/header.html
+++ b/components/header.html
@@ -16,11 +16,14 @@
 
         <nav id="main-nav" role="navigation" aria-hidden="true">
             <ul>
+                <!-- Chia sẻ -->
+                <li><a href="public_status_board.html">📤 Chia sẻ</a></li>
+                
+                <!-- Viết Bài -->
+                <li><a href="write.html" class="cta-nav-link">✍️ Viết Bài</a></li>
+                
                 <!-- Trang Chủ -->
                 <li><a href="index.html">🏠 Trang Chủ</a></li>
-                
-                <!-- Blog -->
-                <li><a href="blog.html">📰 Blog</a></li>
 
                 <!-- Khám Phá Cảm Xúc (Dropdown) -->
                 <li class="has-dropdown">
@@ -58,8 +61,6 @@
                     </ul>
                 </li>
 
-                <!-- Nút Viết Bài nổi bật -->
-                <li><a href="write.html" class="cta-nav-link">✍️ Viết Bài</a></li>
             </ul>
         </nav>
     </div>
