--- a/components/header.html
+++ b/components/header.html
@@ -17,7 +17,7 @@
         <nav id="main-nav" role="navigation" aria-hidden="true">
             <ul>
                 <!-- Chia sẻ -->
-                <li><a href="public_status_board.html">📤 Chia sẻ</a></li>
+                <li><a href="public_status_board.html" class="cta-nav-link">📤 Chia sẻ</a></li>
                 
                 <!-- Viết Bài -->
                 <li><a href="write.html" class="cta-nav-link">✍️ Viết Bài</a></li>
