--- a/components/header.html
+++ b/components/header.html
@@ -16,7 +16,7 @@
                 <span class="icon-dark" aria-hidden="true">🌙</span>
             </button>
             
-            <label for="nav-toggle" class="nav-toggle" aria-label="Mở/đóng menu">
+            <label for="nav-toggle" class="nav-toggle" aria-label="Mở/đóng menu" role="button" tabindex="0">
                 <span></span>
                 <span></span>
                 <span></span>
