--- a/components/header.html
+++ b/components/header.html
@@ -8,7 +8,7 @@
             </a>
         </div>
 
-        <input id="nav-toggle" type="checkbox" hidden aria-controls="main-nav" aria-expanded="false" />
+    <input id="nav-toggle" type="checkbox" aria-controls="main-nav" aria-expanded="false" />
         
         <div class="header-actions">
             <button id="header-theme-toggle" class="icon-button" type="button" aria-label="Đổi chế độ sáng/tối">
